--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,26 +1,25 @@
 /***Nav Styles****/
-.nav-container{
+.nav-container {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
     height: 120px;
     z-index: 2;
     background-color: white;
-
-
-
 }
-.nav-item{
+
+.nav-item {
     color: black;
     font-size: 4vw;
     text-decoration: none;
     font-family: "Bodoni MT Poster Compressed", sans-serif;
 
 }
+
 /****Footer Styling***/
-.app-footer{
+.app-footer {
     display: flex;
-    flex-flow:column nowrap;
+    flex-flow: column nowrap;
     justify-content: space-evenly;
     align-items: center;
 
@@ -28,17 +27,36 @@
     font-size: 2vw;
 
     background-color: white;
+    z-index: 0;
 
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-
-
+    height: 100px;
 }
-/*****Content Styling*****/
 
-.content-container{
+.contact-footer {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+    font-size: 2vw;
+
+    background-color: white;
+    z-index: 0;
+
+    position: absolute;
+    bottom: -90vh;
+    left: 0;
+    right: 0;
+    height: 100px;
+}
+
+/*****Content Styling*****/
+.content-container {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -48,22 +66,45 @@
     top: 120px;
     left: 0;
     right: 0;
-    bottom: 100px;
     font-family: "Bodoni MT Poster Compressed", sans-serif;
     background-color: #f5f7fb;
-
-
-
+    z-index: 1;
 }
-.content-container p{
+
+.content-container p {
     font-size: 3vw;
 }
-h1{
+
+.contact__sub__container {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-around;
+    align-items: center;
+
+}
+
+.location-data {
+    margin-left: 50px;
+    width: 40vw;
+    font-family: "Bodoni MT Poster Compressed", sans-serif;
+    display: flex;
+    flex-flow: column nowrap;
+
+    font-size: xx-large;
+
+}
+
+.location-data p {
+    font-size: xx-large;
+}
+
+h1 {
     text-align: center;
     font-family: "Bodoni MT Poster Compressed", sans-serif;
 }
+
 /******Contact Form*****/
-.contact-form{
+.contact-form {
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
@@ -72,20 +113,26 @@ h1{
 }
 
 .email-input,
-.subject-input{
+.subject-input {
     font-size: large;
     text-align: center;
     padding: 12px 10px 12px 10px;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    border:2px solid black;
+    border: 2px solid black;
 
 }
-.email-input{
+
+.email-input {
     width: 50vw;
 
 }
-.contact-form textarea{
+
+.subject-input {
+    width: 30vw;
+}
+
+.contact-form textarea {
     resize: none;
     text-align: left;
     width: 50vw;
@@ -93,21 +140,29 @@ h1{
     font-family: "Bodoni MT Poster Compressed", sans-serif;
     padding: 12px 10px 12px 10px;
 
-    border:2px solid black;
+    border: 2px solid black;
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
 
     font-size: large;
 
 }
-.submit{
+
+.submit {
     margin-top: 15px;
     padding: 14px 7px 14px 7px;
     border-radius: 8px 6px 8px 6px;
     font-size: large;
-
     background-color: white;
 }
 
+@media (max-width: 600px) {
+    .contact__sub__container {
+        flex-flow: column nowrap;
+    }
+    .location-data{
+        margin-left: 0;
+    }
 
 
+}
