--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,8 +26,7 @@
 }
 
 /****Footer Styling***/
-.app-footer,
-.contact-footer {
+.app-footer {
     display: flex;
     flex-flow: column nowrap;
     justify-content: space-evenly;
@@ -38,22 +37,13 @@
 
     background-color: #6ccddc;
     color: white;
-
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100px;
-
+    padding-top: 50px;
 }
 
-.contact-footer {
-    bottom: -10vw;
-    left: 0;
-    right: 0;
-    height: 300px;
-    justify-content: flex-end;
-}
+
+
+
+
 
 /*****Content Styling*****/
 .content-container {
@@ -62,14 +52,13 @@
     justify-content: center;
     align-items: center;
 
-    position: absolute;
-    top: 130px;
-    left: 0;
-    right: 0;
     font-family: "Bodoni MT Poster Compressed", sans-serif;
     background-color: #6ccddc;
     color: white;
     z-index: 1;
+
+
+
 }
 
 .content-container p {
@@ -110,7 +99,7 @@ h1 {
     height: 60vh;
 
     position: absolute;
-    top: 12vh;
+    top: 40vh;
 
     display: flex;
     flex-flow: row wrap;
@@ -126,6 +115,8 @@ h1 {
     justify-content: space-evenly;
     align-items: center;
     width: 45vw;
+
+
 
 }
 
@@ -240,6 +231,7 @@ h1 {
     }
 
     /*******Contact Page END********/
+
 
 
 }
