added product styles to main.css

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -21,8 +21,6 @@
 .nav-item:hover {
     text-decoration: underline;
     transform: scale(1.1);
-
-
 }
 
 /****Footer Styling***/
@@ -38,6 +36,105 @@
     background-color: #6ccddc;
     color: white;
     padding-top: 50px;
+}
+.category-container{
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 20px;
+}
+.full_container{
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    width: 25vw;
+    height: 60vh;
+    margin: 10px;
+}
+.column_container{
+    width: 20vw;
+    height: 60vh;
+    background-color: white;
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.column_container img{
+    width: 20vw;
+    height: 40vh;
+    min-width: 20vw;
+}
+.product_information{
+    display: flex;
+    flex-flow:row nowrap;
+    align-items: center;
+    justify-content: flex-start;
+    height: 20vh;
+    width: 20vw;
+    color: black;
+}
+.product_name{
+    font-weight: bold;
+}
+.desc_container{
+    padding-left: 10px;
+}
+.action_buttons {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    width: 4vw;
+    opacity: 0;
+
+    transition: 1s ease;
+
+    background-color: #1a202c;
+}
+.action_button{
+    height: 20vh;
+    width: 3vw;
+    text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+.full_container:hover .action_buttons{
+    display: flex;
+    opacity: 1;
+}
+@media (max-width: 850px) {
+    .category-container{
+        align-items: center;
+        justify-content: center;
+
+    }
+    .full_container{
+        width: 70vw;
+        margin-left: 5vw;
+    }
+    .column_container{
+        width: 50vw;
+    }
+    .column_container img{
+        width: 50vw;
+    }
+    .product_information{
+        width: 50vw;
+    }
+    .action_buttons{
+        width: 20vw;
+    }
+    .action_button{
+        width: 20vw;
+    }
+
+
 }
 
 
